# RustBackEnd

./: .gitignore  README.md  rust_tutor.md
awesome_crates/clap/: Cargo.toml
backend/: .env  Cargo.toml  Dockerfile  Dockerfile.env  Dockerfile.musl  start.sh  stop.sh
backend/auto_reagent/: Cargo.toml  ENV.sh
backend/auto_reagent/src/: config.yml  lib.rs  readme.md
backend/auto_reagent/src/handlers/: history_data.rs  login.rs  machine_panel.rs  mod.rs  monitor.rs  verify_token.rs
backend/auto_reagent/src/handlers/entities/: date_time_range.rs  history_data.rs  http_result.rs  key.rs  mod.rs
backend/auto_reagent/src/interface/: crud.rs  mod.rs  user.rs
backend/auto_reagent/src/middleware/: limiter.rs  mod.rs  myws.rs  redis_data.rs  sqlx_manager.rs  token_man.rs
backend/auto_reagent/src/model/: user.rs
backend/auto_reagent/src/models/: mod.rs  query_data.rs  token.rs  user.rs
backend/auto_reagent/src/models/entities/: login_info.rs  mod.rs  prelude.rs  record.rs  temp_record.rs  turbine_state.rs
backend/auto_reagent/src/router/: login.rs
backend/auto_reagent/src/service/: mod.rs  token_control.rs  user_control.rs
backend/auto_reagent/src/utility/: config.rs  mod.rs  parameter.rs  pass_hash.rs  time.rs
backend/opcua_client/: Cargo.toml
backend/opcua_client/pki/own/: cert.der
backend/opcua_client/pki/private/: private.pem
backend/opcua_client/src/: lib.rs
backend/opcua_client/src/Example/: auto_reagent.rs  mod.rs
backend/opcua_client/src/entity/: temperature.rs
backend/opcua_client/src/opcua_config/: mod.rs  opcua_session_wrapper.rs
backend/opcua_client/src/opcua_config/data_adaptor/: collector.rs  mod.rs
backend/opcua_client/src/opcua_config/data_adaptor/interface/: collect.rs  mod.rs  transfer.rs
backend/opcua_client/src/opcua_config/data_adaptor/unit/: DataTime.rs  Instruction.rs  mod.rs
backend/opcua_client/src/opcua_config/node_config/: NodeConfig.rs  config.yml  data_type.rs  mod.rs
backend/opcua_client/src/utility/: time.rs
backend/websocket/: Cargo.toml
backend/websocket/pki/own/: cert.der
backend/websocket/pki/private/: private.pem
backend/websocket/src/pki/own/: cert.der
backend/websocket/src/pki/private/: private.pem
tools/converge_caption/: Cargo.toml
tools/markdown_number/: Cargo.toml  input.md
(+2 files in other folders)
