[package]
name = "AutoReagent"
version = "0.1.0"
edition = "2021"
default-run = "backend"

[dependencies]
actix-web = "4.4.0"
actix-rt = "2.9.0"
actix-cors = "0.6.5"
actix-web-actors = "=4.3.0"
actix = "0.13.5"
actix-session = { version = "=0.9.0", features = ["redis-rs-session"] }
actix-redis = "=0.13.0"

serde = { version = "1.0.188", features = ["derive"]}
chrono = { version = "0.4.31", features = ["serde"]}
sqlx = { version = "0.8.2", features = ["mysql", "postgres", "sqlite","runtime-tokio", "chrono","tls-rustls-ring"] }
rustls = "=0.23.13"
lazy_static = "=1.5.0"
redis = { version = "0.25.4", features = ["tokio-comp"] }
rand = "0.8.5"
uuid = { version = "1.8.0", features = ["v4"] }
jwt = "=0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
serde_json = "1.0.121"
dotenvy = "0.15.7"

[[bin]]
name = "backend"

