[package]
name = "opcua_client"
version = "0.1.0"
edition = "2021"
default-run="test"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opcua = "0.12.0"
AutoReagent = { version="0.1.0",path="../auto_reagent" }
redis = { version = "0.25.4", features = ["tokio-comp"] }
tokio = { version = "1.38.0", features = ["full"] }
chrono = { version = "0.4.31", features = ["serde"]}
mysql = { version = "25.0.0", features = ["chrono"] }
serde = { version = "1.0.188", features = ["derive"]}
serde_yml = "=0.0.11"
queues = "=1.1.0"
lazy_static = "=1.5.0"
tungstenite = "0.23.0"
futures = "0.3.30"
sqlx = { version = "0.6", features = ["mysql", "runtime-actix-native-tls","chrono"] }
anyhow = "=1.0.86"
dotenvy = "0.15.7"

[[bin]]
name = "test"